# Tickers

./: .gitignore  Cargo.toml  README.md
frontend/: test.html
migrations/: get_data.py  upload_data.py
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/0000_inital/: down.sql
react-client/: package-lock.json  package.json  tsconfig.json
react-client/src/: App.jsx
react-client/src/components/: range-calendar.jsx  stock-panel.jsx
react-client/src/components/ui/: calendar.jsx
src/: api.rs  backend.rs  database.rs  frontend.rs  main.rs  models.rs  routes.rs  schema.rs
views/: index.html
